feat: PostgreSQL 연동을 위한 ORM 모델 및 DB 설정 기본 구조 추가
- requirements.txt에 sqlalchemy, asyncpg, alembic 등 DB 연동 패키지 추가
- app/db.py: SQLAlchemy async 엔진/세션/베이스 선언
- app/models.py: users, chat_sessions, chat_messages ORM 모델 정의
- app/config.py: DATABASE_URL 환경변수 예시 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 fastapi
 uvicorn[standard]
-pydantic-settings 
+pydantic-settings
+sqlalchemy[asyncio]
+asyncpg
+alembic
+psycopg2-binary
+passlib[bcrypt]
+python-jose[cryptography] 
