docs: alembic 마이그레이션, DB 연동, .gitignore 등 백엔드 개발환경 가이드 강화
- alembic 마이그레이션 폴더 및 DB 설계/연동 안내 추가
- .gitignore 규칙 및 버전관리 팁 명시
- 환경변수(.env) 예시, 개발 환경 세팅 절차 구체화
- 폴더 구조에 db.py, models.py, alembic/versions 등 추가
- 커밋 시 주의사항(민감정보 커밋 금지 등) 안내

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
   APP_NAME=climate-factcheck-backend
   DEBUG=True
+  DATABASE_URL=postgresql+asyncpg://imfact_user:비밀번호@localhost:5432/imfact
+  SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:비밀번호@localhost:5432/imfact
