--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
   DEBUG=True
   DATABASE_URL=postgresql+asyncpg://imfact_user:비밀번호@localhost:5432/imfact
   SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:비밀번호@localhost:5432/imfact
+  SECRET_KEY=your-very-secret-key
+  ALGORITHM=HS256
+  ACCESS_TOKEN_EXPIRE_MINUTES=60
