docs: .env.example에 smtp 관련 env 설정 업데이트
- .env.example 추가

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@
   SECRET_KEY=your-very-secret-key
   ALGORITHM=HS256
   ACCESS_TOKEN_EXPIRE_MINUTES=60
+  NAVER_EMAIL=your_naver_id@naver.com
+   NAVER_PASSWORD=your_naver_password
