redis rag 구조 im-fact/ask 엔드포인트에 적용

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,9 @@ python-jose[cryptography]
 pydantic[email]
 pytest-asyncio
 httpx
+redis==5.3.0
+numpy
+openai
+python-dotenv
+langchain
+langchain-openai
