--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@
   ACCESS_TOKEN_EXPIRE_MINUTES=60
   NAVER_EMAIL=your_naver_id@naver.com
    NAVER_PASSWORD=your_naver_password
+  OPENAI_API_KEY=your-openai-api-key
+  REDIS_URL=redis://localhost:6379
