--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@
    NAVER_PASSWORD=your_naver_password
   OPENAI_API_KEY=your-openai-api-key
   REDIS_URL=redis://localhost:6379
+  BRAVE_AI_API_KEY=
+  GOOGLE_API_KEY=
