--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,69 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:17
     environment:
       POSTGRES_DB: imfact
       POSTGRES_USER: imfact_user
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD} # 비밀번호는 .env 파일에서 불러옴
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-imfact_demo_pass}
     ports:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    env_file:
-      - .env # 민감정보는 .env 파일로 분리, git에는 커밋하지 않음
+    networks:
+      - imfact-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U imfact_user -d imfact"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
-    image: redis:8
+    image: redis/redis-stack:latest
     ports:
       - "6379:6379"
-    # Redis 8.0 이상은 벡터 검색, JSON 등 모든 최신 기능이 기본 내장됨
-    # 별도의 redis-stack/redisearch 모듈 설치 불필요 (공식 권장)
+      - "8001:8001"
+    volumes:
+      - redis_data:/data
+    networks:
+      - imfact-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     build: .
-    command: bash -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://imfact_user:${POSTGRES_PASSWORD:-imfact_demo_pass}@db:5432/imfact
+      - SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:${POSTGRES_PASSWORD:-imfact_demo_pass}@db:5432/imfact
+      - REDIS_URL=redis://redis:6379
+      - SECRET_KEY=${SECRET_KEY:-demo_secret_key_for_development_only}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - BRAVE_AI_API_KEY=${BRAVE_AI_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - NAVER_EMAIL=${NAVER_EMAIL}
+      - NAVER_PASSWORD=${NAVER_PASSWORD}
+    command: bash -c "sleep 15 && alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     volumes:
       - .:/app
     ports:
       - "8000:8000"
-    env_file:
-      - .env
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - imfact-network
+    restart: unless-stopped
+
+networks:
+  imfact-network:
+    driver: bridge
 
 volumes:
-  db_data: 
+  db_data:
+  redis_data: 
