Docker Compose 및 환경설정 개선: DB/Redis/백엔드 연동 및 환경변수 통일
- docker-compose.yml에서 db, redis, backend 서비스 연결 구조 정비
- DB 접속 정보(비밀번호 등)를 .env 및 환경변수로 통일
- backend/alembic.ini, app/config.py 등에서 DB 비밀번호 및 URL 일관성 유지
- 백엔드에서 DB/Redis 주소를 서비스명으로 변경하여 컨테이너 간 통신 오류 해결
- Alembic 마이그레이션 자동 적용 및 healthcheck 추가
- README에 Docker 기반 실행법 및 환경변수 관리법 명확히 안내

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
   APP_NAME=climate-factcheck-backend
   DEBUG=True
-  DATABASE_URL=postgresql+asyncpg://imfact_user:비밀번호@localhost:5432/imfact
-  SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:비밀번호@localhost:5432/imfact
+  DATABASE_URL=postgresql+asyncpg://imfact_user:비밀번호@db:5432/imfact
+  SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:비밀번호@db:5432/imfact
   SECRET_KEY=your-very-secret-key
   ALGORITHM=HS256
   ACCESS_TOKEN_EXPIRE_MINUTES=60
-  NAVER_EMAIL=your_naver_id@naver.com
-   NAVER_PASSWORD=your_naver_password
   OPENAI_API_KEY=your-openai-api-key
   REDIS_URL=redis://localhost:6379
   BRAVE_AI_API_KEY=
   GOOGLE_API_KEY=
+  POSTGRES_PASSWORD=
