--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://imfact_user:imfact0623@localhost:5432/imfact
+sqlalchemy.url = postgresql+psycopg2://imfact_user:imfact0623@db:5432/imfact
 
 
 [post_write_hooks]
