--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       POSTGRES_DB: imfact
       POSTGRES_USER: imfact_user
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-imfact_demo_pass}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
@@ -20,7 +20,7 @@ services:
       retries: 5
 
   redis:
-    image: redis/redis-stack:latest
+    image: redis:latest
     ports:
       - "6379:6379"
       - "8001:8001"
@@ -37,8 +37,8 @@ services:
   backend:
     build: .
     environment:
-      - DATABASE_URL=postgresql+asyncpg://imfact_user:${POSTGRES_PASSWORD:-imfact_demo_pass}@db:5432/imfact
-      - SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:${POSTGRES_PASSWORD:-imfact_demo_pass}@db:5432/imfact
+      - DATABASE_URL=postgresql+asyncpg://imfact_user:${POSTGRES_PASSWORD}@db:5432/imfact
+      - SYNC_DATABASE_URL=postgresql+psycopg2://imfact_user:${POSTGRES_PASSWORD}@db:5432/imfact
       - REDIS_URL=redis://redis:6379
       - SECRET_KEY=${SECRET_KEY:-demo_secret_key_for_development_only}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
