--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://imfact_user:imfact0623@db:5432/imfact
+# sqlalchemy.url = postgresql+psycopg2://imfact_user:imfact0623@db:5432/imfact
+# URL은 env.py에서 환경변수로 설정됨
 
 
 [post_write_hooks]
